# lector

./: README.md  amazon.tf  deploy.sh  main.py  policy.json  pyproject.toml  rss.json  sources.opml
static/: main.css
templates/: index.html
